# himawari-ml

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: bundle_week_and_phase2.yml  ci.yml  daily_rollup_phase2.yml  ingest.yml  ingest_burst.yml  ingest_hourly.yml  ingest_japan.yml  multiday-convlstm.yml  multiday-rollup.yml  publish.yml  train.yml  unet_infer_daily.yml  weekly_rollup.yml
data/: .gitignore
docs/: index.md  methodology.md  results.md
ml/: eval_convlstm_rollout.py  eval_horizon.py  infer_rollout.py  infer_unet_masks.py  infer_unet_pixelmask.py  train_convlstm.py  train_unet.py  train_unet_pixelmask.py
notebooks/: exploration.ipynb
scripts/: build_dataset.py  cloud_mask_baseline.py  cloud_objects.py  compare_detectors.py  fetch_sequence.py  track_storms.py  train_baseline.py  viz_clusters.py  viz_timeseries.py
scripts/analysis/: build_frame_features.py
scripts/experiments/anomaly/: anomaly_luma.py  detect_iforest.py
scripts/experiments/segmentation/: cloud_mask_baseline.py  cloud_mask_baseline_v2.py  cloud_objects.py
scripts/experiments/tracking/: track_multi.py  track_multi_objects.py
scripts/maintenance/: rename_raw_to_utc.py
scripts/pipeline/: consolidate_master.py  fetch_sequence.py  filter_black_frames.py  run_phase2_sequenceA.py  run_phase3_unet_daily.py  run_sample_pipeline.py  stage_frames.py
src/himawari_ml/evaluation/: metrics.py  uncertainty.py  visualize_predictions.py
src/himawari_ml/inference/: nowcast_latest.py  run_latest.py
src/himawari_ml/ingest/: fetch_japan.py  (+2 more)
(+26 files in other folders)
